# WinRPCResolver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: FileCrawler.h  ResolveWindows.h  RpcMonitor.h  RpcServersConfig.h
src/: FileCrawler.cpp  ResolverWin.cpp  RpcMonitor.cpp  RpcServersConfig.cpp  main.cpp
src/Windows/: ResolveWindows.cpp
